--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="OpenCV_project.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m2_1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
