--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -160,6 +160,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="m2_1.cpp" />
+    <ClCompile Include="m2_2.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
