--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="m2_1.cpp" />
     <ClCompile Include="m2_2.cpp" />
     <ClCompile Include="m3_1.cpp" />
+    <ClCompile Include="m3_2.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
