--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="m3_3.cpp" />
     <ClCompile Include="m3_4.cpp" />
     <ClCompile Include="m3_5.cpp" />
+    <ClCompile Include="m3_6.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
