--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="m3_1.cpp" />
     <ClCompile Include="m3_10.cpp" />
     <ClCompile Include="m3_11.cpp" />
+    <ClCompile Include="m3_12.cpp" />
     <ClCompile Include="m3_2.cpp" />
     <ClCompile Include="m3_3.cpp" />
     <ClCompile Include="m3_4.cpp" />
