--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="m3_12.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m3_13.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
