--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="m3_10.cpp" />
     <ClCompile Include="m3_11.cpp" />
     <ClCompile Include="m3_12.cpp" />
+    <ClCompile Include="m3_13.cpp" />
     <ClCompile Include="m3_2.cpp" />
     <ClCompile Include="m3_3.cpp" />
     <ClCompile Include="m3_4.cpp" />
