--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="m3_13.cpp" />
     <ClCompile Include="m3_14.cpp" />
     <ClCompile Include="m3_15.cpp" />
+    <ClCompile Include="m3_16.cpp" />
     <ClCompile Include="m3_2.cpp" />
     <ClCompile Include="m3_3.cpp" />
     <ClCompile Include="m3_4.cpp" />
