--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="m3_7.cpp" />
     <ClCompile Include="m3_8.cpp" />
     <ClCompile Include="m3_9.cpp" />
+    <ClCompile Include="m4_1.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
