--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -178,6 +178,7 @@
     <ClCompile Include="m3_8.cpp" />
     <ClCompile Include="m3_9.cpp" />
     <ClCompile Include="m4_1.cpp" />
+    <ClCompile Include="m4_2.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
