--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="m4_3.cpp" />
     <ClCompile Include="m4_4.cpp" />
     <ClCompile Include="m4_5.cpp" />
+    <ClCompile Include="m4_6.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
