--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="m4_6.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m4_7.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
