--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -184,6 +184,7 @@
     <ClCompile Include="m4_5.cpp" />
     <ClCompile Include="m4_6.cpp" />
     <ClCompile Include="m4_7.cpp" />
+    <ClCompile Include="m4_8.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
