--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -185,6 +185,7 @@
     <ClCompile Include="m4_6.cpp" />
     <ClCompile Include="m4_7.cpp" />
     <ClCompile Include="m4_8.cpp" />
+    <ClCompile Include="m4_9.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
