--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="m4_9.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m4_10.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
