--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="m4_1.cpp" />
     <ClCompile Include="m4_10.cpp" />
     <ClCompile Include="m4_11.cpp" />
+    <ClCompile Include="m4_12.cpp" />
     <ClCompile Include="m4_2.cpp" />
     <ClCompile Include="m4_3.cpp" />
     <ClCompile Include="m4_4.cpp" />
