--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="m4_11.cpp" />
     <ClCompile Include="m4_12.cpp" />
     <ClCompile Include="m4_13.cpp" />
+    <ClCompile Include="m4_14.cpp" />
     <ClCompile Include="m4_2.cpp" />
     <ClCompile Include="m4_3.cpp" />
     <ClCompile Include="m4_4.cpp" />
