--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="m4_7.cpp" />
     <ClCompile Include="m4_8.cpp" />
     <ClCompile Include="m4_9.cpp" />
+    <ClCompile Include="m5_1.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
