--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="m5_2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m5_3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
