--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -193,6 +193,7 @@
     <ClCompile Include="m4_9.cpp" />
     <ClCompile Include="m5_1.cpp" />
     <ClCompile Include="m5_2.cpp" />
+    <ClCompile Include="m5_3.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
