--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -194,6 +194,7 @@
     <ClCompile Include="m5_1.cpp" />
     <ClCompile Include="m5_2.cpp" />
     <ClCompile Include="m5_3.cpp" />
+    <ClCompile Include="m5_4.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
