--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -195,6 +195,7 @@
     <ClCompile Include="m5_2.cpp" />
     <ClCompile Include="m5_3.cpp" />
     <ClCompile Include="m5_4.cpp" />
+    <ClCompile Include="m5_5.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
