--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="m5_4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m5_5.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
