--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -199,6 +199,7 @@
     <ClCompile Include="m5_6.cpp" />
     <ClCompile Include="m5_7.cpp" />
     <ClCompile Include="m5_8.cpp" />
+    <ClCompile Include="m5_9.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
