--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -201,6 +201,7 @@
     <ClCompile Include="m5_8.cpp" />
     <ClCompile Include="m5_9.cpp" />
     <ClCompile Include="m6_1.cpp" />
+    <ClCompile Include="m6_2.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
