--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="m6_1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m6_2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
