--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -203,6 +203,7 @@
     <ClCompile Include="m6_1.cpp" />
     <ClCompile Include="m6_2.cpp" />
     <ClCompile Include="m7_1.cpp" />
+    <ClCompile Include="m7_2.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
