--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -205,6 +205,7 @@
     <ClCompile Include="m7_1.cpp" />
     <ClCompile Include="m7_2.cpp" />
     <ClCompile Include="m7_3.cpp" />
+    <ClCompile Include="m7_4.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
