--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -206,6 +206,7 @@
     <ClCompile Include="m7_2.cpp" />
     <ClCompile Include="m7_3.cpp" />
     <ClCompile Include="m7_4.cpp" />
+    <ClCompile Include="m7_5.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
