--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -208,6 +208,7 @@
     <ClCompile Include="m7_4.cpp" />
     <ClCompile Include="m7_5.cpp" />
     <ClCompile Include="m7_6.cpp" />
+    <ClCompile Include="m7_m.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
