--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClCompile Include="m7_6.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m7_m.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
