--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -168,6 +168,9 @@
     <ClCompile Include="m7_m.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m8_1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
