--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -211,6 +211,7 @@
     <ClCompile Include="m7_m.cpp" />
     <ClCompile Include="m8_1.cpp" />
     <ClCompile Include="m8_2.cpp" />
+    <ClCompile Include="m8_3.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
