--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -212,6 +212,7 @@
     <ClCompile Include="m8_1.cpp" />
     <ClCompile Include="m8_2.cpp" />
     <ClCompile Include="m8_3.cpp" />
+    <ClCompile Include="m8_4.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
