--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -213,6 +213,7 @@
     <ClCompile Include="m8_2.cpp" />
     <ClCompile Include="m8_3.cpp" />
     <ClCompile Include="m8_4.cpp" />
+    <ClCompile Include="m8_5.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
