--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClCompile Include="m8_4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m8_5.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
