--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -215,6 +215,7 @@
     <ClCompile Include="m8_4.cpp" />
     <ClCompile Include="m8_5.cpp" />
     <ClCompile Include="m8_6.cpp" />
+    <ClCompile Include="m8_7.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
