--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -216,6 +216,7 @@
     <ClCompile Include="m8_5.cpp" />
     <ClCompile Include="m8_6.cpp" />
     <ClCompile Include="m8_7.cpp" />
+    <ClCompile Include="m9_1.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
