--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -218,6 +218,7 @@
     <ClCompile Include="m8_7.cpp" />
     <ClCompile Include="m9_1.cpp" />
     <ClCompile Include="m9_2.cpp" />
+    <ClCompile Include="m9_3.cpp" />
     <ClCompile Include="OpenCV_project.cpp" />
   </ItemGroup>
   <ItemGroup>
