--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -161,6 +161,7 @@
   <ItemGroup>
     <ClCompile Include="m10_1.cpp" />
     <ClCompile Include="m10_2.cpp" />
+    <ClCompile Include="m10_3.cpp" />
     <ClCompile Include="m2_1.cpp" />
     <ClCompile Include="m2_2.cpp" />
     <ClCompile Include="m3_1.cpp" />
