--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -210,6 +210,9 @@
     <ClCompile Include="m10_3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m10_4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
