--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="m10_1.cpp" />
     <ClCompile Include="m10_2.cpp" />
     <ClCompile Include="m10_3.cpp" />
+    <ClCompile Include="m10_4.cpp" />
     <ClCompile Include="m2_1.cpp" />
     <ClCompile Include="m2_2.cpp" />
     <ClCompile Include="m3_1.cpp" />
