--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="m10_3.cpp" />
     <ClCompile Include="m10_4.cpp" />
     <ClCompile Include="m10_5.cpp" />
+    <ClCompile Include="m10_6.cpp" />
     <ClCompile Include="m2_1.cpp" />
     <ClCompile Include="m2_2.cpp" />
     <ClCompile Include="m3_1.cpp" />
