--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -216,6 +216,9 @@
     <ClCompile Include="m10_5.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m10_6.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
