--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -219,6 +219,9 @@
     <ClCompile Include="m10_6.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m11_1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
