--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -228,6 +228,9 @@
     <ClCompile Include="m11_3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m11_4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
