--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClCompile Include="m11_4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m12_1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
