--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="m11_3.cpp" />
     <ClCompile Include="m11_4.cpp" />
     <ClCompile Include="m12_1.cpp" />
+    <ClCompile Include="m12_2.cpp" />
     <ClCompile Include="m2_1.cpp" />
     <ClCompile Include="m2_2.cpp" />
     <ClCompile Include="m3_1.cpp" />
