--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -240,6 +240,9 @@
     <ClCompile Include="m12_3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m12_4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
