--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -246,6 +246,9 @@
     <ClCompile Include="m13_1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m13_2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
