--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="m12_3.cpp" />
     <ClCompile Include="m12_4.cpp" />
     <ClCompile Include="m13_1.cpp" />
+    <ClCompile Include="m13_2.cpp" />
     <ClCompile Include="m2_1.cpp" />
     <ClCompile Include="m2_2.cpp" />
     <ClCompile Include="m3_1.cpp" />
