--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -255,6 +255,9 @@
     <ClCompile Include="m13_4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m14_1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
