--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -258,6 +258,9 @@
     <ClCompile Include="m14_1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m14_2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
