--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -178,6 +178,7 @@
     <ClCompile Include="m13_3.cpp" />
     <ClCompile Include="m13_4.cpp" />
     <ClCompile Include="m14_1.cpp" />
+    <ClCompile Include="m14_2.cpp" />
     <ClCompile Include="m2_1.cpp" />
     <ClCompile Include="m2_2.cpp" />
     <ClCompile Include="m3_1.cpp" />
