Scale Invariant Feature Transform (SIFT)

--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -179,6 +179,7 @@
     <ClCompile Include="m13_4.cpp" />
     <ClCompile Include="m14_1.cpp" />
     <ClCompile Include="m14_2.cpp" />
+    <ClCompile Include="m14_3.cpp" />
     <ClCompile Include="m2_1.cpp" />
     <ClCompile Include="m2_2.cpp" />
     <ClCompile Include="m3_1.cpp" />
