--- a/OpenCV_project.vcxproj
+++ b/OpenCV_project.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="m14_2.cpp" />
     <ClCompile Include="m14_3.cpp" />
     <ClCompile Include="m14_4.cpp" />
+    <ClCompile Include="m14_5.cpp" />
     <ClCompile Include="m2_1.cpp" />
     <ClCompile Include="m2_2.cpp" />
     <ClCompile Include="m3_1.cpp" />
