--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -270,6 +270,9 @@
     <ClCompile Include="m14_5.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m14_6.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
