--- a/OpenCV_project.vcxproj.filters
+++ b/OpenCV_project.vcxproj.filters
@@ -276,6 +276,9 @@
     <ClCompile Include="m15_1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="m15_2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV.h">
